RESOLVED FIXED214545
Fix buggy assert in h265_vps_sps_pps_tracker.cc
https://bugs.webkit.org/show_bug.cgi?id=214545
Summary Fix buggy assert in h265_vps_sps_pps_tracker.cc
youenn fablet
Reported 2020-07-20 02:16:01 PDT
Fix buggy assert in h265_vps_sps_pps_tracker.cc
Attachments
Patch (3.01 KB, patch)
2020-07-20 02:17 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-07-20 02:17:54 PDT
EWS
Comment 2 2020-07-20 11:28:40 PDT
Committed r264606: <https://trac.webkit.org/changeset/264606> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404704 [details].
Radar WebKit Bug Importer
Comment 3 2020-07-20 11:29:17 PDT
Note You need to log in before you can comment on or make changes to this bug.