Fix buggy assert in h265_vps_sps_pps_tracker.cc https://bugs.webkit.org/show_bug.cgi?id=214545

Reviewed by Eric Carlson.

Source/ThirdParty/libwebrtc:

* Source/webrtc/modules/video_coding/h265_vps_sps_pps_tracker.cc:

LayoutTests:

* platform/mac-wk2/TestExpectations:


Canonical link: https://commits.webkit.org/227354@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264606 268f45cc-cd09-0410-ab3c-d52691b4dbfc